--- a/Report.Rmd
+++ b/Report.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Text mining project"
-author: "mindu931"
+title: "Evaluation wine base on description"
+author: "Duc Duong(mindu931)"
 date: "16 January 2019"
 output:
   word_document: default
@@ -20,18 +20,19 @@ knitr::opts_chunk$set(echo = TRUE, warning=FALSE, message=FALSE, include=FALSE)
 ```
 
 # Abstract
-Wine sensory audition and assessment is never easy, even with a wine specialist. However, the description which is printed on each bottle can bring us some helpful information. Base on that ideal, I decided to analyze the data about wine review (take form Kaggle) and help the consumers make the decision on two different aspects. The first one is which is a good and excellent wine. The second aspect is which is the valueble bottle (high value with a acceptable amount of money). I use different techniques to process the text data, then compare Naive Bayes, SVM linear and SVM RBF kernel when building the best model for predicting. The final results are quite impressive with accuracy 78.24% for the first issue and 77.09% for the second one. Base on these model, some suggestions are provided for the consumers to choose a satisfied bottle.
+Wine sensory examination and assessment is never easy, even with a wine specialist. However, the description which is printed on each bottle can bring us some helpful information. Base on that ideal, I decided to analyze the data about wine review (take form Kaggle) and help the consumers make the decision on two different aspects. The first one is which is a good and excellent wine. The second aspect is which is the valueble bottle (high value with a acceptable amount of money). I use different techniques to process the text data, then compare Naive Bayes, SVM linear and SVM RBF kernel when building the best model for predicting. The final results are quite impressive with accuracy 78.69% for the first issue and 77.09% for the second one. Base on these model, some suggestions are provided for the consumers to choose a satisfied bottle.
 
 # Introduction
 ## Motivation
 I always confuse when standing in a wine cellar. How can I choose an excellent wine for my family? What is the best wine I can choose with my budget? The problem can be solved easier if I had a good sense. But, sadly, I don't, like many people in this world. The problems still continue when I listen to the advice of the salesman and even taste some wine. So, I usually choose randomly a bottle based on these advices for my event. Unluckily, sometimes my relatives don't think that it is an excellent wine.
+
 ## Aim
 I guess that the information from the provider (description, country, region, designation...) should bring some important information. So, I try to solve the problems base on text mining ideal: Take the wine data which is already reviewed and marked by some specialists, then process these data together with the points and build a model to prediction in order to figure out which bottle is good or excellent, which one have high benefit or just medium.
 ## Content of this report
 In this report, Firstly, I will provide information about the data as well as the way I define the class for each bottle. Then, I briefly summary relevant theory. The method I used will be presented in details. It includes the steps for preprocessing, techiques for comparing and choosing the best model. Finally is some suggestions for choosing wine, some discussions and my conclusion.
 
 # Data
-Wine review data is taken form Kaagle [link](https://www.kaggle.com/zynicide/wine-reviews). I choose the second .csv version of this dataset. In this version, duplicated data is removed. The data include 120975 samples about wine. Each sample contains the following information: country, description, designation, points, price, province, region, more specific region (region2), tester name, taster_twitter handle, title, variety, and winery. Here is the overlook of the data:
+Wine review data is taken form Kaagle ([link](https://www.kaggle.com/zynicide/wine-reviews)). I choose the second .csv version of this dataset. In this version, duplicated data is removed. The data include 120975 samples about wine. Each sample contains the following information: country, description, designation, points, price, province, region, more specific region (region2), tester name, taster_twitter handle, title, variety, and winery. Here is the overlook of the data:
 ```{r}
 wine <- read.csv("C:/Users/Duong Minh Duc/Documents/GitHub/Text-Mining-Project/wine.csv")
 ```
@@ -66,7 +67,6 @@ $$idf(t,D) = log \frac {|D|}{|d \in D : t \in d|}$$
 ${|d \in D : t \in d|}$ number of documents where the term t appears. If this value equal 0, it will be adjust to 1  
 D: total number of documents in the corpus  
 
-To be specific, If a word is represented many times in almost documents, it is not so importance, and vice versa.  
 
 * Machine learning kernels: a kernel can understand as a core algorithm used when training a model in ML. Here are the three kernels that I use in this report:
 
@@ -82,7 +82,7 @@ Naive-Bayes theory make an asump that all features are independent. The assumpti
 
 ![SVM RBF kernel](SVMRBF_kernel.png)
 
-* Ngram: n-gram is n continue sequence words. In this project, n-gram is used for making corpus. An example is n=2 continue words wil be features. To be more specific, the sentence: "this is a sentence" will have this_is, is_a, a_sentence as features.
+* Ngram: n-gram is n continue sequence words. In this project, n-gram is used for making corpus. An example is n=2 continue words wil be features. To be more specific, the sentence: "this is a sentence" will have "this_is", "is_a", "a_sentence" as features.
 
 * Part-Of-Speech Tagger (POS Tagger): This is the method to process text and decided each word is nouns, ajdtive, adverb...
 
@@ -121,7 +121,7 @@ stopwords
 ```
 
   + Steamming: I steam the word by using SnowballC steam.
-  + Tonkenzine and making the bag of words as the corpus. Then I only keep 99% spare term. Which mean that only the words that appear in at least 1% of documents are kept. It makes sense because there are some rare words which only appear in one or a few documents. That words are not helpful for training because maybe we never meet it again in the testing set.
+  + Tonkenzine and making the bag of words as the corpus. Then I only keep 99% spare term, which mean that only the words that appear in at least 1% of documents are kept. It makes sense because there are some rare words which only appear in one or a small number of documents. That words are not helpful for training because maybe we never meet it again in the testing set.
   
   + Create the document terms matrix base on tf-idf.  
   
@@ -135,7 +135,7 @@ At this step, I'll use the ready Dtm for training model, then test with the test
 * Final result: Final model is selected and run again with 100% data. The final result is reported based on this model.
 
 ## Result and explain
-* Firstly, Let's takes a look at 5 original paragraphs and the paragraphs after preprocessing to see how it work:
+* Firstly, Let's takes a look at the original paragraph and the paragraphs after preprocessing to see how it work:
 ```{r}
 # Use for check the not available and duplicate data, but not necessary
 wine <- na.omit(wine)
@@ -178,13 +178,9 @@ wine$description <- iconv(wine$description, from = "UTF-8", to = "ASCII", sub = 
 #Spit train test
 n = dim(wine)[1]
 set.seed(12345)
-id = sample(1:n, floor(n*0.8))
-train_full = wine[id,]
-test_full = wine[-id,]
 
 id2 = sample(1:n, floor(n*0.2))
 wine_sample <- wine[id2,]
-wine2 <- wine[id2,]
 n2 = length(id2)
 id_test = sample(1:n2, floor(n2*0.8))
 train = wine_sample[id_test,]
@@ -211,11 +207,11 @@ wine_train_set <- clean(train$description)
 ```
 
 ```{r, include=TRUE}
-train$description[1:5]
-wine_train_set[1:5]
+train$description[1]
+wine_train_set[[1]]$content
 ```
 
-- Then, Here is the Dtm for the first sentence of training set:
+Then, Here is the Dtm for the first sentence of training set:
 ```{r}
 
 train_dtm_tfidf <- DocumentTermMatrix(wine_train_set, control = list(weighting = weightTfIdf))
@@ -296,7 +292,7 @@ confusionMatrix(conf_svmLinear_train)
 
 ![SVMRBF result](SVMRBF_predict.png)
 
-As we can see in the result, The accuracy when training data for NB, SVM Linear and SVM RBF is 75.01%, 78.64%, and 81.11%. As a result, I expected that the accuracy when testing with test data will be similar. But they are 74.68% for NB, 78.59% for SVM Linear and 71.36%. SVM Linear is the kernel which has the highest value of accuracy for testing. No information rate (NIR) 0.5323 mean that a class takes 53.23%(Good class), which mean the data is balanced. We can judge that the model is actually work.
+As we can see in the result, The accuracy when training data for NB, SVM Linear and SVM RBF is 75.1%, 78.6%, and 81.1%. As a result, I expected that the accuracy when testing with test data will be similar. But they are 74.68% for NB, 78.59% for SVM Linear and 71.36%. SVM Linear is the kernel which has the highest value of accuracy for testing. Noticed that No information rate (NIR) 0.5323 mean that a class takes 53.23%(Good class), which mean the data is balanced. We can judge that the model is actually work.
 
 But, accuracy is just one side of the story. Let see about the classification: We have two classes "good" and "excellent". If the class is predicted exactly, it's perfect. Obviously, excellent wine is better than good wine. So, if a good wine is predicted as excellent wine, it's hard to accept (Similar to false negative-FN). In contrast, If you pretend to buy good wine but have excellent wine. You are just lucky and nothing happened. (similar with false positive-FP)
 
@@ -350,7 +346,7 @@ train_svmLinear_model
 confusionMatrix(conf_svmLinear_train)
 ```
 
-The result is quite bad, which means 2-gram is not useful. Based on my observation. After preprocess and steaming, the description is quite discrete. I mean the words are likely not connected to each other. It leads to the 2-gram model does not work.
+The result is worse than the previous in all indicator, which means 2-gram is not useful. Based on my observation. After preprocess and steaming, the description is quite discrete. I mean the words are likely not connected to each other. It leads to the 2-gram model does not work.
 
   + I continue with both bag of words and 2-gram (which means 1-2gram). Here is the first line of Dtm:
 ```{r}
@@ -369,26 +365,26 @@ wine_test_set <- clean(test$description)
 wine_test_set <- DocumentTermMatrix(wine_test_set, control = list(dictionary = Terms(train_dtm_tfidf) ,weighting = weightTfIdf, tokenize=NLP_tokenizer))
 
 #create matrix for training
-wine_train_set <<- as.matrix(train_dtm_tfidf)
+wine_train_set_ngram <<- as.matrix(train_dtm_tfidf)
 wine_test_set <- as.matrix(wine_test_set)
-wine_test_set <- wine_test_set[,Terms(train_dtm_tfidf)]
+wine_test_set_ngram <- wine_test_set[,Terms(train_dtm_tfidf)]
 #create the test result
-wine_testing_result <- test$quality
+wine_testing_result_ngram <- test$quality
 
 ```
 
 ```{r, include=TRUE}
-wine_train_set[1,]
+wine_train_set_ngram[1,]
 ```
 
 And here is the result:
 
 ```{r}
-train_svmLinear_model <- train(x= wine_train_set, y=train$quality , method = 'svmLinear3')
+train_svmLinear_model <- train(x= wine_train_set_ngram, y=train$quality , method = 'svmLinear3')
 
-model_svmLinear_result <- predict(train_svmLinear_model, newdata = wine_test_set)
+model_svmLinear_result <- predict(train_svmLinear_model, newdata = wine_test_set_ngram)
 
-conf_svmLinear_train <- table(model_svmLinear_result, wine_testing_result)
+conf_svmLinear_train <- table(model_svmLinear_result, wine_testing_result_ngram)
 names(dimnames(conf_svmLinear_train)) <- c("Predicted class", "Actual class")
 
 ```
@@ -398,9 +394,10 @@ train_svmLinear_model
 confusionMatrix(conf_svmLinear_train)
 ```
 
-The accuracy is slightly decreased. Good news is the False negative is slightly better. It's like the trade-off between models. Consider that and the dimension of Dtm is large (which lead to high training time), while there are too many features with 0 point. I conclude that 1-2 gram is not so useful. Overall, n-gram is not a way to improve the model.
+The accuracy is slightly increased. Good news is the False negative is really better (371 compare to 448) of course the false positive shows an increase. It's like the trade-off between models.To explain, I see that there are some important pairs that impove the model. 
+Consider that and the dimension of Dtm is large (which lead to high training time), while there are too many features with 0 point. I conclude that 1-2 gram is a little bit better. 
 
-* The other attempt to improve is adjusted the weight for Dtm. As I observed in the data. The description usually talk about ingredients: lemon, cherry or region: Veneto... So, the first idea is double the point for nouns and see how it works. On the other hand, Adjective used to describe the flavor of wine could make an important role. So, the second ideal is double the point for adj only.
+* The other attempt to improve is adjusted the weight for DTM (with bag of words). As I observed in the data. The description usually talk about ingredients: lemon, cherry or region: California... So, the first idea is double the point for nouns and see how it works. On the other hand, Adjective used to describe the flavor of wine could make an important role. So, the second ideal is double the point for adj only.
 To do these. I implement POS tagger and see which word is nouns, adj, verb... 
 
 Here are the list nouns that I extracted:`
@@ -454,10 +451,6 @@ adj <- colnames(wine_train_set)[adj_id]
 nouns
 ```
 
-Here is the adjective list:
-```{r, include=TRUE}
-adj
-```
 
 ```{r}
 
@@ -477,7 +470,7 @@ wine_test_set[,column_id] <- wine_test_set[,column_id]*2
 
 ```
 
-Let's take a look at the Dtm of the first document to make sure that the points for nouns is doubled. As we can see below, the points for finger is 0.32...
+Let's take a look at the Dtm of the first document to make sure that the points for nouns is doubled. As we can see below, the points for the word "california" is 0.139. It's just 0.064 before.
 ```{r, include=TRUE}
 wine_train_set[1,]
 ```
@@ -497,9 +490,13 @@ train_svmLinear_model
 confusionMatrix(conf_svmLinear_train)
 ```
 
-We can see that accuracy is slightly increasing (just 0.3%). FN is slightly decreasing. Although the number of FP is increasing but overall, I conclude that the model is a little bit better. 
+We can see that The accuracy is decreasing 0.2%. FN is decreasing a few units. I conclude that the model is not better. 
 
-Now double the point only for adjectives: Let's take a look at the Dtm of the first document to make sure that the points for nouns is doubled. As we can see below, the points for finger is 0.32...
+Now double the point only for adjectives: Here is the list adjectives that I extracted:
+```{r, include=TRUE}
+adj
+```
+
 ```{r}
 #remove double point for nouns
 wine_train_set[,column_id] <- wine_train_set[,column_id]/2
@@ -520,11 +517,8 @@ wine_test_set[,column_id] <- wine_test_set[,column_id]*2
 
 ```
 
-```{r, include=TRUE}
-wine_train_set[1,]
-```
 
-And here is the result:
+And here is the result after double the point for adjetives:
 ```{r}
 train_svmLinear_model <- train(x= wine_train_set, y=train$quality , method = 'svmLinear3')
 
@@ -539,71 +533,17 @@ train_svmLinear_model
 confusionMatrix(conf_svmLinear_train)
 ```
 
-The accuracy is just increasing 0.2%. But the FN is decreasing 29 units, quite impressive. TP for the excellent class is higher. Although FN is also higher. **I conclude that the best model for "good" - "excellent" wine classify is SVM linear with double tf-idf point for adjectives.**
+It's clearly that this model is more or less the same with the original one. **I conclude that the best model for "good" - "excellent" wine classify is SVM linear with 1-2gram.**
 
-To explain why double the point for adj is better than double the point for nouns. When reviewing the dataset. I see there are two reasons: Firstly, most important nouns is the ingredients, country, region... They can use the same ingredients, but the experts may have some unique techniques to make it become excellent wine. So, nouns are not so helpful. But adjective, which means the tease or the properties of the wines will show clearly the difference between good and excellent wine. Secondly, because I steam when process data. Many original words are steamed to nouns but it is not the nouns in the original paragraph. (we can see that the number of nouns is higher than the number of adjectives) Which leads to the method is not as useful as expected.
-
-Here is the final result if I try with 100% of data:
-```{r}
-wine_train_set_full <- clean(train_full$description)
-
-train_dtm_tfidf_full <- DocumentTermMatrix(wine_train_set_full, control = list(weighting = weightTfIdf))
-train_dtm_tfidf_full <- removeSparseTerms(train_dtm_tfidf_full, 0.99)
-
-#create the test set
-wine_test_set_full <- clean(test_full$description)
-wine_test_set_full <- DocumentTermMatrix(wine_test_set_full, control = list(dictionary = Terms(train_dtm_tfidf_full) ,weighting = weightTfIdf))
-#wine_test_set <- DocumentTermMatrix(wine_test_set, control = list(dictionary = Terms(train_dtm_tfidf) , tokenize=NLP_tokenizer))
-
-#create matrix for training
-wine_train_set_full <<- as.matrix(train_dtm_tfidf_full)
-wine_test_set_full <- as.matrix(wine_test_set_full)
-wine_test_set_full <- wine_test_set_full[,Terms(train_dtm_tfidf_full)]
-#create the test result
-wine_testing_result_full <- test_full$quality
-
-tag_full <- tagPOS(Terms(train_dtm_tfidf_full))
-tag_full <- tag_full$POStags
-adj_id_full <- which( tag_full=="JJ")
-adj_full <- colnames(wine_train_set_full)[adj_id_full]
-
-column_id_full <- c()
-
-#multify for noun
-for (i in 1:dim(wine_train_set_full)[2]) {
-  check <- colnames(wine_train_set_full)[i] %in% adj_full
-  if(check)
-    {
-      column_id_full <- c(column_id_full, i)
-    }
-}
-
-wine_train_set_full[,column_id_full] <- wine_train_set_full[,column_id_full]*2
-wine_test_set_full[,column_id_full] <- wine_test_set_full[,column_id_full]*2
-
-
-train_svmLinear_model_final1 <- train(x= wine_train_set_full, y=train_full$quality , method = 'svmLinear3')
-
-model_svmLinear_result_final1 <- predict(train_svmLinear_model_final1, newdata = wine_test_set_full)
-
-
-conf_svmLinear_train_final1 <- table(model_svmLinear_result_final1, wine_testing_result_full)
-names(dimnames(conf_svmLinear_train_final1)) <- c("Predicted class", "Actual class")
-
-```
-
-```{r, include=TRUE}
-train_svmLinear_model_final1
-confusionMatrix(conf_svmLinear_train_final1)
-```
+To explain why double the point is not working. When reviewing the dataset. I see there are three reasons: Firstly, most important nouns is the ingredients, country, region... They can use the same ingredients, plant in the same region. But, the experts may have some unique techniques to make it become excellent wine.  So, nouns are not so helpful. I also see that only famous ingredients are mentioned. Maybe they the secret one is not public. Secondly, because I steam when process data. Many original words are steamed to nouns but it is not the nouns in the original paragraph. (we can see that the number of nouns is higher than the number of adjectives) Which leads to the method is not as useful as expected. Finally, One factor can affect the system is POS tagger doesn't work perfectly, especially in the adjective list. For example, the word "blackberri" should be in the noun list but it appears in the adjective list, and vice versa for the words "yellow". 
 
 
 #Second aspect: High value wine
 ## The problem
 In most of the time, the price of the bottle can reflect the quality of the wine. For example, If you want to buy excellent wine, choose the 1000$ bottle. That method should work. But, most of us don't have the financial condition for buying like this. The point is if we have a limit amount of money, or we just don't want to pay too much for a bottle, how can we choose? It's my idea for the second problem: Spend money in the right way.
 
-Just want to confirm that the problem is real and solveable. Let see the scatter plot of price vs points for wines 100$ and under:
-```{r}
+Just want to confirm that the problem is real and solvable. Let see the scatter plot of price vs points for wines 100$ and under:
+```{r, include=TRUE}
 ggplot(subset(wine, price <= 100),
        aes(x = price, y = points)) +
   geom_point(alpha = 0.3,  position = position_jitter()) + 
@@ -612,27 +552,26 @@ ggplot(subset(wine, price <= 100),
   theme_bw()
 ```
 
-As we can see. There is a positive relation between the points and the price. But, the points for bottles with the same price can be very different. Very cheap wine(<10$) can have up to 92 point while many 25 dollar wine just have less than 85 points.  
+As we can see. There is a positive relationship between the points and the price. But, the points for bottles with the same price can be very different. Very cheap wine(<10$) can have up to 92 points while many 25 dollar wines just have less than 85 points.  
 
-The thing that I see from this graph is: We can have a steagery for choosing excellent wine with with a low budget, while there is a high probality of having just a good bottle when choosing randomly even with quite high price (~50$). 
+The thing that I see from this graph is: We can have a strategy for choosing excellent wine with a low budget, while there is a high probability of having just a good bottle when choosing randomly even with a quite high price (~50$). 
 
 ##Aim
 The aim is similar with the first problem: Using NLP and compare ML kernel to solve this problems.
 
 ## Method and result
 Let's take a look at the price of our data: 
-```{r}
+```{r, include=TRUE}
 par(mfrow=c(1,2))
 boxplot(wine$price, main = "Box plot of the price")
 boxplot(log(wine$price), main = " Boxplot of log of the price")
 ```
 
-
-Because the price range quite big. Prices have a lot of outliers and high value of SD. otherwise, the log of the price looks better and quite similar to the point. 
+The price range quite high. Prices have a lot of outliers and high value of SD. otherwise, the log of the price looks better and quite similar to the point. 
 
 I define the $Value = \frac {points} {log(price)}$ Here is the value:
 
-```{r}
+```{r, include=TRUE}
 boxplot(wine$value, main = "Value of the price")
 ```
 
@@ -649,7 +588,7 @@ I do the same preprocessing for the text. Then continue to compare models with s
 
 ![SVMLinear_benefit](SVMLinear_benefit_predict.png)
 
-As we can see, SVM Linear is better than Nb in both accuracy and how the bottle is classified. Now I'll try with POS Tagger
+As we can see, SVM Linear is better than NB in both accuracy and how the bottle is classified. Now I'll try with POS Tagger
 
 Here is the result when double the point for nouns:
 ![SVMLinear benefit predict double point for nouns](SVMLinear_benefit_predict_2N.png)
@@ -657,53 +596,57 @@ Here is the result when double the point for nouns:
 And here is the result when double the point for adjectives:
 ![SVM benefit predict double point for adj](SVMLinear_benefit_predict_2adj.png)
 
-
-
 In this case, POS Tagger doesn't show any clear effect either with double the point for nouns or adjective. All indicator is more or less the same, or even worse. As I said before, The way of classifying here is quite strange. I still don't too much ideal about how the description should be for each class.
 
+And here is with 1-2gram model
+![SVM benefit 1-2gram](SVMLinear_benefit_1-2gram.png)
+
+![SVM benefit 1-2gram predict](SVMLinear_benefit_1-2gram_predict.png)
+
+In this case, 1-2gram doesn't improve the model.
+
 **I conclude that the final model for "high" - "medium" wine value classify is SVM linear with tf-idf, bag of words**
-
-Here is the final result for this model:
-![SVM benefit full data](SVMLinear_benefit_full.png)
-
-![SVM benefit predict full data](SVMLinear_benefit_predict_full.png)
 
 # Futher discusssion
 ##Suggession for choosing wine
 Because both problems is solve uing SVMLinear model, which use vector based on tf-idf points. As a result, top points of each class should be the most influences of the class. In this section, I'll extract the top  influences of each class and draw by word cloud.
 
-Here is the result from the SVM Linear for "good" - "excellent" wine model: The first cloud is for good wine and the second one is for excellent wine
+Here is the result from the SVM Linear for "good" - "excellent" wine model: The first cloud is for excellent wine and the second one is for good wine
 ```{r}
-
-good<- which(train_full$quality=="good")
-good <- wine_train_set_full[good,]
+set.seed(1121)
+good<- which(train$quality=="good")
+good <- wine_train_set_ngram[good,]
 good = data.frame(sort(colSums(good), decreasing=TRUE))
-excellent<- which(train_full$quality=="excellent")
-excellent <- wine_train_set_full[excellent,]
+excellent<- which(train$quality=="excellent")
+excellent <- wine_train_set_ngram[excellent,]
 excellent = data.frame(sort(colSums(excellent), decreasing=TRUE))
 ```
 
 ```{r, include=TRUE}
 
-wordcloud(rownames(excellent), excellent[,1], max.words=100, colors=brewer.pal(8, "Dark2"))
-
-wordcloud(rownames(good), good[,1], max.words=100, colors=brewer.pal(8, "Dark2"), main= "Top tfidf good class")
+wordcloud(rownames(excellent), excellent[,1], max.words=100, colors=brewer.pal(8, "Dark2"), scale=c(4,.5))
 
 ```
-Suggesstion for choosing wine:...
+
+```{r, include=TRUE}
+wordcloud(rownames(good), good[,1], max.words=100, colors=brewer.pal(8, "Dark2"), scale=c(4,.5))
+```
+
+Suggesstion for choosing wine: For excellent wine, we should pay attention to the word "vineyard", which is a  plantation of grape-bearing vines, grown mainly for winemaking. "concentr" (concentrate) "red_blen", "blanc",  "itali" (Italy), "fresh" are some words those you should look when searching for an excellent bottle.  "red" and "oak" will appear in both class. "sauvignon", "finish", "fruit" and "franc" (France) are typical words for "good" class.
+Here are the top influencer words from the SVM Linear for "high" - "medium" wine model. The first cloud is for the high benefit wine and the second one is for the medium benefit wine.
 
 
-Here is the top influences from the SVM Linear for "high" - "medium" wine model. The first cloud is for high benefit wine and the second one is for medium benefit wine
+Here are the top influencer words from the SVM Linear for "high" - "medium" wine model. The first cloud is for high benefit wine and the second one is for medium benefit wine.
 
 ```{r}
 #remove double points for adj
-wine_train_set_full[,column_id_full] <- (wine_train_set_full[,column_id_full]/2)
+wine_train_set[,column_id] <- wine_train_set[,column_id]/2
+wine_test_set[,column_id] <- wine_test_set[,column_id]/2
 
-
-high<- which(train_full$benefit=="high")
-high <- wine_train_set_full[high,]
-medium<- which(train_full$benefit=="medium")
-medium <- wine_train_set_full[medium,]
+high<- which(train$benefit=="high")
+high <- wine_train_set[high,]
+medium<- which(train$benefit=="medium")
+medium <- wine_train_set[medium,]
 
 high = data.frame(sort(colSums(high), decreasing=TRUE))
 
@@ -712,21 +655,28 @@ medium = data.frame(sort(colSums(medium), decreasing=TRUE))
 ```
 
 ```{r, include=TRUE}
-wordcloud(rownames(high), high[,1], max.words=100, colors=brewer.pal(8, "Dark2"))
+wordcloud(rownames(high), high[,1], max.words=100, colors=brewer.pal(8, "Dark2"), scale=c(4,.5))
 
-wordcloud(rownames(medium), medium[,1], max.words=100, colors=brewer.pal(8, "Dark2"))
 ```
 
-Suggesstion for choosing wine:...
+```{r, include=TRUE}
+wordcloud(rownames(medium), medium[,1], max.words=100, colors=brewer.pal(8, "Dark2"), scale=c(4,.5))
+```
+
+Suggesstion for choosing wine: Suggestions for choosing wine: "franc" (France) and "itali" (Italy) likely have more high-value bottle than medium. "spain" (Spain), "carbenet", "appl" (apply), "pear", "cherri" are words for high benefit.  "valley", "black", "champagn" are considered when looking for a medium benefit wine.
 
 ##Future work:
-- Here are some points that can improve from the project:
+* Here are some points that can improve from the project:
   + Check again the SVM RBF kernel with a bigger data set and more powerful computer. In my experiments, SVM RBF is better than SVM Linear in most the cases. 
- + Take the advice from wine specialist to improve the model. In my opinion, we should fully understand the dataset before thinking about machine learning. In this case. Because my knowledge of wine is limited. I often don't clearly understand about a bottle after reading the description. It leads to the ideal about improve the model is limited.
+  + Take the advice from wine specialist to improve the model. In my opinion, we should fully understand the dataset before thinking about machine learning. In this case. Because my knowledge of wine is limited. I often don't clearly understand about a bottle after reading the description. It leads to the ideal for improving the model are limited.
  + Improve the POS tagger function.
+ + Check again the result for 1-2gram with a bigger data set. I try with full data but mycomputer is crashed when train the model because DTM for full data is very heavy (we have a lot of terms)
+ + Split red wine and white wine. These types of wine are quite different in both ingredient and technique.  Red wine takes 2/3 of data set while ¼ is white wine (1/12 are others). But you must have some knowledge about wine when split the dataset because the type of wine is not provided, we only have variety like "white blend", "pinot noir", "portuguese red", "riesling".. 
+ + Improve the stop word list. Knowledge about wine is required.
 
+ 
 # Conclusion
-The issues raised at the beginning are solved with a good result. We figure out that the description and other information printed in a bottle can bring us some ideal about how good the bottle is or how high level of benefit it has. We also have some idea about how can we choose a satified bottle. In the NLP and ML aspect. SVM linear with double tf-idf point for the adjective is the best model for predicting the quality with 78.24% accuracy. For predicting the benefit of a bottle, SVM linear is an acceptable model, with accuracy 77.09%.
+The issues raised at the beginning are solved with a good result. We figure out that the description and other information printed in a bottle can bring us some ideal about how good the bottle is or how high level of benefit it has. We also have some idea about how can we choose a satified bottle. In the NLP and ML aspect. SVM linear with 1-2gram is the best model for predicting the quality with 78.69% accuracy. For predicting the benefit of a bottle, SVM linear is an acceptable model, with accuracy 77.09%.
 
 # References
 1. Slide of this course
